@startuml
class RecommenderEnsempleEvaluation {
    - id: int
    - enable: bool
    - ensemble: RecommenderEnsemble
}

class RecommenderEnsempleEvaluationMetric {
    - evaluation: RecommenderEnsempleEvaluation
    - user: User
    - value: float
}

RecommenderEnsemble "1" *-- "n" RecommenderEnsempleEvaluation

RecommenderEnsempleEvaluation "1" *-- "n" RecommenderEnsempleEvaluationMetric

class Recommender {
    - id: int
    - type: RecommenderType
    - name: str
    - description: str
    - position: int
    - enable: bool
    - user_similarity_matrix: SimilarityMatrix
    - item_similarity_matrix: SimilarityMatrix
    - max_similar_users: int
    - max_similar_items: int
    - max_items_by_similar_user: int
}

enum RecommenderType {
    POPULARS
    NEW_POPULARS
    USER_PROFILE
    COLLAVORATIVE_FILTERING
}

Recommender ..|> RecommenderType

class SimilarityMatrix {
    - id: int
    - name: str
    - type: SimilarityMatrixType
    - description: str
    - version: int (Last version)
    - cells: List<SimilarityMatrixCell>
}


SimilarityMatrix ..|> SimilarityMatrixType

enum SimilarityMatrixType {
    ITEM_TO_ITEM
    USER_TO_USER
}

class SimilarityMatrixCell {
    - id: int
    - matrix: SimilarityMatrix
    - row: int
    - column: int
    - value: float
    - version: int
}

class RecommenderEnsemble {
    - id: str
    - name: str
    - description: str
    - position: int
    - enable: bool
    - recommenderConfigs: List<RecommenderEnsembleConfig>
}

class RecommenderEnsembleConfig {
    - id: int
    - ensemble: RecommenderEnsemble
    - recommender: Recommender
    - active_from_n_user_iterations: int
    - active_to_n_user_iterations: int
    - n_items_by_session: int
}

RecommenderEnsemble "1" *-- "n" RecommenderEnsembleConfig
RecommenderEnsembleConfig "1" o-- "1" Recommender


SimilarityMatrix "1" *-- "n" SimilarityMatrixCell

Recommender "1" o-- "1" SimilarityMatrix: user_similarity_matrix
Recommender "1" o-- "1" SimilarityMatrix: item_similarity_matrix

class Interaction {
    - id: int
    - item: Item
    - user: User
    - rating: float
}


Interaction "n" *-- "1" Item

Interaction "n" *-- "1" User

class Item {
    - id: int
    - name: Str
    - description: Str
    - image: URL
    - popularity: float
    - rating: float
    - votes: float
    - tags: List<Tag>
}


class Tag {
    - id: int
    - name: Str
}

Item "n" *-- "n" Tag

@enduml